2003/01/20 Nick Drochak <ndrochak@gol.com>

	* makefile: take out type-reflector since it's gone.

2003-01-18  Sebastien Pouliot  <spouliot@videotron.ca>

	* makefile, makefile.gnu: Renamed Cert2Spc.exe to cert2spc.exe.

2003-01-09  Gaurav Vaish <gvaish_mono AT lycos.com>

	* assemblies.xml     : Needed for Mobile controls enumerations.

2002-12-31  Jonathan Pryor <jonpryor@vt.edu>

  * makefile.gnu: Add support for DIRS to all, install targets.  This was done
    so type-reflector's install target could be independent/self-contained.

2002-12-27  Sebastien Pouliot  <spouliot@videotron.ca>

	* ASN1.cs: New. Classes to manipulate Abstract Syntax Notation 1
	structures.
	* cert2spc.cs: New tool to generate Software Publisher Certificate
	(SPC) from a list of X509 certificate and CRL.
	* secutils.cs: Changed copyright notice.
	* makefile: Added cert2spc.exe to Windows build.
	* makefile.gnu: Added cert2spc.exe to Linux build.

2002-12-22  Sebastien Pouliot  <spouliot@videotron.ca>

	* secutils.cs: New tool to extract strongname and X509 certificate
	from assembly (or other signed files).
	* makefile: Added secutil.exe to Windows build.
	* makefile.gnu: Added secutil.exe to Linux build.

2002-12-06  Duncan Mak  <duncan@ximian.com>

	* makefile.gnu (clean): Remove *.dbg files.

2002-10-16  Daniel Morgan <danmorg@sc.rr.com>

	* SqlSharpCli.cs: SQL query tool moved 
	from mcs/class/System.Data/Test
	to mcs/tools/SqlSharp.  Include it in the build
	so people can have a place to test connection strings
	and the ADO.NET providers

2002-09-01  Jonathan Pryor <jonpryor@vt.edu>
	* type-reflector: new tool.  See type-reflector/README for more information.

2002-03-09  Martin Baulig  <martin@gnome.org>

	* DumpCultureInfo.cs: New tool to dump culture info. Incomplete,
	we need to get unicode support working before we can use this.

2002-03-05  Gaurav Vaish <gvaish@iitk.ac.in>

	* GenerateDelegate.cs: Generates delegates (EventHandler) as